Fix getFirst usage in catalog service test